started weather app, is fetching data from api

--- a/angular.json
+++ b/angular.json
@@ -135,6 +135,13 @@
             "devServerTarget": "app:serve"
           },
           "configurations": {
+            "localhost": {
+              "fileReplacements": [
+                  {
+                      "replace": "src/environments/environment.ts",
+                      "with": "src/environments/environment.localhost.ts"
+                  }
+              ],
             "production": {
               "devServerTarget": "app:serve:production"
             },
